fixed backface visibility bug in safari

--- a/src/Components/Card/Card.css
+++ b/src/Components/Card/Card.css
@@ -52,6 +52,7 @@
     background: rgb(240, 248, 250);
     /* linear-gradient(45deg,#80ffff, #00ffff, #00ffff); */
     border-radius: 10px;
+    -webkit-backface-visibility: hidden; /* Safari */
 }
 
 .frontContainer{
@@ -59,6 +60,7 @@
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
+    -webkit-backface-visibility: hidden; /* Safari */
 }
 
 .back{
@@ -78,6 +80,7 @@
     width: 100%;
     border-radius: 10px;
     object-fit: cover;
+    -webkit-backface-visibility: hidden; /* Safari */
 }
 
 .logo{
@@ -100,4 +103,5 @@
     border-style: solid;
     border-width: thin thin 0 0;
     border-color: rgba(13, 14, 75, 0.938);
+    -webkit-backface-visibility: hidden; /* Safari */
 }
